prepare for git push

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
       <ul class="nav navbar-nav">
         <li class=""><%= link_to 'Tweets', tweets_path %></li>
         <li class=""><%= link_to 'Say Something!', new_tweet_path %></li>
+        <li class=""><%= link_to 'See all Kritters', profiles_path %></li>
 		</ul>
 
       <ul class="nav navbar-nav navbar-right">
