--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,5 +1,6 @@
 <h1>All Kritters</h1>
 
 <% @users.each do |user| %>
+	<%= image_tag user.image.url(:thumb) %> 
 	<%= link_to user.username, profile_path(user) %><br>
 <% end %>
